remove unused files / not gonna use them

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	<body>
 		<div id="tictactoe"></div>
 		
-		<div class="credits">Created by <a href="http://camara.pt" target="_blank">Pablo Câmara</a></div>
+		<div class="credits">Created by <a href="https://pablo.camara.pt" target="_blank">Pablo Câmara</a></div>
 		
 		<script type="text/javascript">
 			GameScript.startNewGame();
