--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
+		<meta charset="utf-8">
 		<title>Tic Tac Toe Game Script</title>
 		<script src="game-script.js"></script>
 
@@ -17,7 +18,7 @@
 	<body>
 		<div id="tictactoe"></div>
 		
-		<div class="credits">Created by <a href="https://pablo.camara.pt" target="_blank">Pablo Câmara</a></div>
+		<div class="credits">Created by <a href="https://pablocamara.pt" target="_blank">Pablo Câmara</a></div>
 		
 		<script type="text/javascript">
 			GameScript.startNewGame();
