add github link

--- a/index.html
+++ b/index.html
@@ -18,7 +18,14 @@
 	<body>
 		<div id="tictactoe"></div>
 		
-		<div class="credits">Created by <a href="https://pablocamara.pt" target="_blank">Pablo Câmara</a></div>
+		<div class="credits">
+			Created by <a href="https://pablocamara.pt" target="_blank">Pablo Câmara</a>
+			<br/>
+			<a href="https://github.com/Pablo-Camara/tic-tac-toe-game-using-native-javascript-oop"
+				target="_blank">
+				View this project in Github
+			</a>
+		</div>
 		
 		<script type="text/javascript">
 			GameScript.startNewGame();
